classDiagram
%% ---------- DOMAIN ----------
class Bus { +BusId; +Model; +BatteryLevel }
class Route { +Name; +DistanceKm }

%% ---------- PERSISTENCE ----------
class FileHelper {
    +LoadBusesAsync(): Task<List~Bus~>
    +SaveBusesAsync(IEnumerable~Bus~): Task
    +LoadRoutesAsync(): Task<List~Route~>
    +SaveRoutesAsync(IEnumerable~Route~): Task
    +CopyDataFile(destPath): Task         /* backup */
}

%% ---------- PRESENTATION ----------
class MainViewModel {
    -fileHelper: FileHelper
    +Buses: ObservableCollection~Bus~
    +Routes: ObservableCollection~Route~
    +InitializeAsync(): Task              /* load */
    +ShutdownAsync(): Task                /* save */
    +BackupCmd(path): Task                /* backup */
}

MainViewModel ..> FileHelper
MainViewModel --> Bus
MainViewModel --> Route
